Address jaxrs.api.rs.bindingpriority.JAXRSClient
Rest Client Filters need to be executed based on their priority